# ai-agents-playground

./: .gitignore  main.py  pyproject.toml
01_simple_agent/: README.md  simple_agent.py
02_openai_intro/: README.md  main.py  pyproject.toml
03_deepagents/: README.md  main.py  pyproject.toml  tools.py
03_langchain_agents/: README.md  main.py  pyproject.toml  tools.py
04_reference/: REFERENCE.md
05_fullstack_agent/: docker-compose.yml
05_fullstack_agent/backend/: requirements.txt
05_fullstack_agent/db/: README.md
05_fullstack_agent/frontend/: index.html  package-lock.json
06_tools_agent/: FLOW.md  docker-compose.yml
06_tools_agent/backend/: requirements.txt
06_tools_agent/frontend/: index.html  package.json
07_hitl_agent/: .env.example  FLOW.md  LANGGRAPH_REFS.md  docker-compose.yml
07_hitl_agent/backend/: requirements.txt
07_hitl_agent/frontend/: index.html
08_short_term_memory/: README.md  main.py  pyproject.toml
09_long_term_memory/: .env.example  AGENT_LLM_FLOW.md  README.md  docker-compose.yml  main.py  pyproject.toml
10_multi_agent/: README.md  docker-compose.yml
11_rag/: Dockerfile  RAG_EXPLAINED.md  docker-compose.yml  rag_api.py  rag_demo.py  requirements.txt
12_rag_fullstack/: .env.example  docker-compose.yml
13_rag_notes/: 01_chunking_strategies.md  02_embeddings.md  03_vector_databases.md  04_retrieval_techniques.md  05_hybrid_search.md  06_reranking.md  07_evaluation.md  08_advanced_rag.md  RAG_FLOW_LANGGRAPH.md  RAG_OPTIMIZATIONS.md  RAG_PROBLEMS.md  RAG_REAL_WORLD.md  RAG_TOOLS_DBS.md
(+72 files in other folders)
