[project]
name = "aiapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain-anthropic>=1.4.6",
    "langgraph>=1.2.5",
]

[tool.uv.workspace]
members = [
    "08_short_term_memory",
    "09_long_term_memory",
]
