[project]
name = "09-long-term-memory"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "langchain-openai>=1.3.3",
    "langgraph>=1.2.5",
    "langgraph-checkpoint-postgres>=3.1.0",
    "psycopg[binary]>=3.3.4",
    "python-dotenv>=1.2.2",
]
